# epaper-frame

./: .env  .gitignore  Cargo.toml  Justfile  README.md  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs
