[package]
name = "epaper-frame"
version = "0.1.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4.20"
esp-idf-hal = "0.41"
esp-idf-svc = { version = "0.46" }
esp-idf-sys = { version = "0.33", features = ["binstart"] }
embedded-svc = { version = "0.25" }
uc8159 = "0.1"
anyhow = "1"
thiserror = "1"
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
embuild = "0.31.3"
